@@ -1,6 +1,6 @@
 #!perl -Tw
 
-use Test::More tests => 25;
+use Test::More tests => 26;
 
 use Carp::Assert::More;
 
